force-app/main/default/objects/Team_Assignment_Rule__c/Team_Assignment_Rule__c.object-meta.xml
<CustomObject>
    <label>Team Assignment Rule</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Team Assignment Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Assignment Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>