force-app/main/default/objects/Team_Assignment_Rule__c/fields/A_Id_for_Flow__c.field-meta.xml
<CustomField>
    <fullName>A_Id_for_Flow__c</fullName>
    <formula>BLANKVALUE( User__c ,  Account__c )</formula>
    <label>User/Account for Flow</label>
    <type>Text</type>
</CustomField>