force-app/main/default/objects/Team_Assignment_Rule__c/fields/IsParentFerguson__c.field-meta.xml
<CustomField>
    <fullName>IsParentFerguson__c</fullName>
    <formula>IF(Account__r.Name == &#39;Ferguson&#39;,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Parent Ferguson</label>
    <type>Checkbox</type>
</CustomField>