force-app/main/default/objects/Team_Assignment_Rule__c/fields/RecordTypeDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeDeveloperName__c</fullName>
    <description>Field which will be used for automation in developer name</description>
    <formula>RecordType.DeveloperName</formula>
    <label>Record Type Developer Name</label>
    <type>Text</type>
</CustomField>