force-app/main/default/objects/Team_Assignment_Rule__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Development Manager</fullName>
            </value>
            <value>
                <fullName>Channel Manager</fullName>
            </value>
            <value>
                <fullName>Chief Sales Officer</fullName>
            </value>
            <value>
                <fullName>Director National Accounts MRO</fullName>
            </value>
            <value>
                <fullName>General Manager</fullName>
            </value>
            <value>
                <fullName>Managing Director Projects</fullName>
            </value>
            <value>
                <fullName>MRO National Account Manage</fullName>
            </value>
            <value>
                <fullName>National Account Manager</fullName>
            </value>
            <value>
                <fullName>National Showroom Manager</fullName>
            </value>
            <value>
                <fullName>Regional Project Manager</fullName>
            </value>
            <value>
                <fullName>Regional Showroom Manager</fullName>
            </value>
            <value>
                <fullName>Sales Support Manager</fullName>
            </value>
            <value>
                <fullName>Sales Support Specialist</fullName>
            </value>
            <value>
                <fullName>Showroom Manager</fullName>
            </value>
            <value>
                <fullName>VP Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>