force-app/main/default/objects/Team_Assignment_Rule__c/fields/SubChannel__c.field-meta.xml
<CustomField>
    <fullName>SubChannel__c</fullName>
    <description>This field will be used for the assignment of the account team</description>
    <inlineHelpText>values should be comma separated.
E.g. A,B,C,D</inlineHelpText>
    <label>Sub Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>