force-app/main/default/objects/Team_Assignment_Rule__c/fields/Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Team_Assignment_Rules1</relationshipName>
    <type>Lookup</type>
</CustomField>