force-app/main/default/objects/Team_Assignment_Rule__c/recordTypes/Account_Team.recordType-meta.xml
<RecordType>
    <fullName>Account_Team</fullName>
    <active>true</active>
    <description>This record type will be used for creating the assignment rules for the Account Team</description>
    <label>Account Team</label>
</RecordType>