force-app/main/default/objects/Team_Assignment_Rule__c/recordTypes/Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Opportunity</fullName>
    <active>true</active>
    <description>This record type will be used for creating the assignment rules for the Opportunity Team</description>
    <label>Opportunity</label>
</RecordType>