force-app/main/default/objects/Team_Assignment_Rule__c/validationRules/VR_Assignment_Type_User.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Assignment_Type_User</fullName>
    <active>true</active>
    <description>OR(
TEXT( Assignment_Type__c ) = &#39;User&#39; &amp;&amp; 
ISBLANK(Account__c ) &amp;&amp; 
!ISBLANK(User__c ) ,

NOT(TEXT( Assignment_Type__c ) = &#39;Account&#39; &amp;&amp; !ISBLANK(Account__c ) &amp;&amp; ISBLANK(User__c ) ))</description>
    <errorConditionFormula>IF(TEXT( Assignment_Type__c ) = &#39;User&#39;,NOT(
ISBLANK(Account__c ) &amp;&amp; 
!ISBLANK(User__c )),FALSE)</errorConditionFormula>
    <errorDisplayField>Assignment_Type__c</errorDisplayField>
    <errorMessage>Invalid assignment is define. Please note that there should be define a user when assignment type user is selected.</errorMessage>
</ValidationRule>