force-app/main/default/objects/Team_Assignment_Rule__c/listViews/Account_Team.listView-meta.xml
<ListView>
    <fullName>Account_Team</fullName>
    <columns>NAME</columns>
    <columns>Assignment_Type__c</columns>
    <columns>Region__c</columns>
    <columns>User__c</columns>
    <columns>Account__c</columns>
    <columns>Role__c</columns>
    <columns>Team_Member__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Team_Assignment_Rule__c.Account_Team</value>
    </filters>
    <label>Account Team</label>
</ListView>