force-app/main/default/objects/Team_Assignment_Rule__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Assignment_Type__c</columns>
    <columns>RecordTypeDeveloperName__c</columns>
    <columns>Region__c</columns>
    <columns>Role__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>