force-app/main/default/objects/Team_Assignment_Rule__c/listViews/Specific_Region_and_Type_Account_Team.listView-meta.xml
<ListView>
    <fullName>Specific_Region_and_Type_Account_Team</fullName>
    <columns>NAME</columns>
    <columns>Assignment_Type__c</columns>
    <columns>Region__c</columns>
    <columns>Account__c</columns>
    <columns>SubChannel__c</columns>
    <columns>Team_Member__c</columns>
    <columns>Role__c</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Team_Assignment_Rule__c.Account_Team</value>
    </filters>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>Midwest</value>
    </filters>
    <filters>
        <field>Assignment_Type__c</field>
        <operation>equals</operation>
        <value>Dealer</value>
    </filters>
    <label>Specific Region and Type Account Team</label>
</ListView>